[package]
name = "muzanci-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
allocative = "0.3.6"
anyhow = "1.0.103"
auth-git2 = "0.6.0"
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.21.0", features = [
    "https",
    "vendored-libgit2",
    "vendored-openssl",
] }
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starlark = "0.14.2"
starlark_derive = "0.14.2"
uuid = { version = "1.23.4", features = ["serde", "v7"] }

[lib]
name = "muzanci_interpreter"
path = "src/lib.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"
